--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "@angular/router": "^5.2.9",
     "angular-editable-text": "^2.0.12",
     "angular-sortablejs": "^1.3.1",
+    "angular2-click-to-edit": "^1.0.52",
     "angularfire2": "^5.0.0-rc.6",
+    "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "firebase": "^4.12.1",
+    "ng2-ck-editable": "^0.1.12",
     "ng2-drag-drop": "^3.0.2",
     "ng2-dragula": "^1.5.0",
     "promise-polyfill": "7.1.1",
